fully functional, no known bugs

--- a/pomodoro-clock.html
+++ b/pomodoro-clock.html
@@ -2,18 +2,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Projektowanie i programowanie responsywnych stron internetowych">
-    <meta name="keywords" content="Patryk Kiedrowski, Kiedrowski, Front-End, Web developer, strona internetowa, responsywna, mobilna, strona">
+    <meta name="description" content="Zegar pomodoro stworzony na potrzeby bootcampu freeCodeCamp.org">
+    <meta name="keywords" content="Patryk Kiedrowski, Kiedrowski, Front-End, Web developer, pomodoro, pomodoro clock, freecodecamp">
     <meta name="theme-color" content="#7CC6FE" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <meta property="og:locale" content="pl_PL">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Patryk Kiedrowski - Front-End Developer">
-    <meta property="og:description" content="Projektowanie i programowanie responsywnych stron internetowych">
+    <meta property="og:title" content="Pomodoro Clock by Patryk Kiedrowski">
+    <meta property="og:description" content="Zegar pomodoro stworzony na potrzeby bootcampu freeCodeCamp.org">
     <link rel="icon" href="#" />
 
-    <title>Patryk Kiedrowski &ndash; Front-End Developer</title>
+    <title>Pomodoro Clock by Patryk Kiedrowski</title>
     <link rel="stylesheet" type="text/css" href="pomodoro-clock.css">
     <link href="https://fonts.googleapis.com/css?family=Play:400,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
