--- a/pomodoro-clock.html
+++ b/pomodoro-clock.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Zegar pomodoro stworzony na potrzeby bootcampu freeCodeCamp.org">
     <meta name="keywords" content="Patryk Kiedrowski, Kiedrowski, Front-End, Web developer, pomodoro, pomodoro clock, freecodecamp">
-    <meta name="theme-color" content="#7CC6FE" />
+    <meta name="theme-color" content="#3C91E6" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
     <meta property="og:locale" content="pl_PL">
